Fixed wrong colors.

--- a/css/styles.css
+++ b/css/styles.css
@@ -765,6 +765,7 @@ body {
     margin: auto;
     padding-top: 10px;
     transition: 0.3s;
+    color: #181818;
 
     border: 3px solid transparent;
     box-sizing: border-box;
